# firnow

./: .env.example  .gitignore  Dockerfile  README.md  config.py  ecosystem.config.js  main.py  package.json  pyproject.toml  redocly.yaml  session.py
backend/: .env.example  .gitignore  Dockerfile  config.py  main.py  pyproject.toml  redocly.yaml
backend/databases/: firestore.py  postgres.py  redis.py  web3.py
backend/dependencies/: upload.py
backend/models/: action.py  auth.py  errors.py  fir_subject.py  location.py  upload_file.py
backend/nginx/: nginx.conf
backend/patched/: preview-server.js
backend/routes/: police_station.py  police_station_urls.py
backend/services/: auth.py  general.py  id.py
backend/templates/: index.html  otp_format.py  (+1 more)
cache/: .hardhat-network-instances.json
databases/: firestore.py  postgres.py  redis.py
dependencies/: auth.py  upload.py
docs/: apiDoc.html  index.html
firebase/: firestore.py  populate_data.py
frontend/: README.md  package.json
models/: action.py  auth.py  errors.py  police_station.py  tables.py  upload_file.py
news/: Ncard.jsx  Ndata.js
nginx/: nginx.conf
openapi/: openapi.yaml
patched/: patched-redocly-reference-docs.min.js
public/: index.html
routes/: police.py  police_station.py  police_station_urls.py
services/: auth.py  general.py  id.py  location.py
solidity-contract/: cmd.txt  hardhat.config.js  package-lock.json
src/: App.css  App.js
templates/: welcome_format.py
utils/: dependencies.py  id.py  otp.py  password.py  token.py
wrapper/: Wrapper.jsx  style.css
(+146 files in other folders)
